deploy/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api-namespace
spec:
  selector:
    matchLabels:
      run: poi
  replicas: 2
  template:
    metadata:
      labels:
        run: poi
        aadpodidbinding: backend
    spec:
      containers:
      - name: poi
        image: registryet76720.azurecr.io/poi:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api-namespace
spec:
  selector:
    run: poi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
