deploy/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api-namespace
  labels:
    app: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryet76720.azurecr.io/trips:latest
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api-namespace
spec:
  selector:
    app: trips
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
