deploy/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api-namespace
  labels:
    app: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
        aadpodidbinding: backend
    spec:
      containers:
      - name: user-java
        image: registryet76720.azurecr.io/user-java:latest
        resources:
          limits:
            memory: 256Mi
            cpu: 500m
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: api-namespace
  name: user-java
spec:
  selector:
    app: user-java
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
