deploy/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api-namespace
  labels:
    app: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
        aadpodidbinding: backend
    spec:
      containers:
      - name: userprofile
        image: registryet76720.azurecr.io/userprofile:latest
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api-namespace
spec:
  selector:
    app: userprofile
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
